--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>color list</h1>
+  <h1>Mate Academy</h1>
   <ul>
     <li>red</li>
   </ul>
 </body>
-</html>
+</html> 
