--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <h1>My Project!!!!!!!</h1>
 <header></header>
 <main></main>
-<footer>Hello WORLD232323</footer>
+<footer></footer>
 </body>
 </html> 
