--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <h1>My Project!!!!!!!</h1>
 <header></header>
 <main></main>
-<footer></footer>
+<footer>HELLO WORDL MAIN</footer>
 </body>
 </html> 
