--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>My Projec</h1>
+  <h1>My Projecctgi</h1>
 <header></header>
-<main></main>
+<main>
+  
+</main>
 <footer></footer>
 </body>
 </html> 
