--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <h1>My Project</h1>
 <body>
-<header></header>
+<header>header</header>
 <main></main>
 <footer>HELLO WORLD</footer>
 </body>
